# ibm-hackathon-aphelion

./: .gitignore  README.md  assumptions.yaml  aws_utils.py  dpk_cleaner.py  emission_logic.py  extended_carbon_app.py  ghg-conversion-factors-2025-flat-format.csv  llm_reasoner.py  main.py  pyproject.toml  sample.py  test.json
temp/input_dpk/: input_invoices.parquet
