[project]
name = "ibm-hackathon-aphelion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.39.12",
    "data-prep-toolkit-transforms>=1.1.0",
    "docling-core>=2.43.1",
    "dotenv>=0.9.9",
    "fuzzywuzzy>=0.18.0",
    "gradio>=5.38.2",
    "plotly>=6.2.0",
    "pypdf2>=3.0.1",
    "pyyaml>=6.0.2",
    "streamlit>=1.47.0",
]
